@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -333,7 +333,7 @@ public class GCHelper {
                         // No existing batch. Create new.
                         currBatch = new GcBatch();
                         batches.add(currBatch);
-                        openGcIds.push(new Integer(gcId));
+                        openGcIds.push(Integer.valueOf(gcId));
                     }
                 }
                 boolean isEndEvent = currBatch.addEvent(event);
